--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.DeliGOv2"
         tools:targetApi="31">
         <activity
+            android:name=".Cliente.ClienteConfirmacionCompra"
+            android:exported="false" />
+        <activity
             android:name=".Cliente.ClienteTrackingActivity"
             android:exported="false" />
         <activity
