--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,12 +6,21 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/deligo"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@drawable/deligo"
         android:supportsRtl="true"
         android:theme="@style/Theme.DeliGOv2"
         tools:targetApi="31">
+        <activity
+            android:name=".LogIn.LoginRecuperarPasswordPrimerPaso"
+            android:exported="false" />
+        <activity
+            android:name=".LogIn.LoginInicioSesion"
+            android:exported="false" />
+        <activity
+            android:name=".LogIn.LoginVistaInicialApp"
+            android:exported="false" />
         <activity
             android:name=".Cliente.ClienteConfirmacionCompra"
             android:exported="false" />
