--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.DeliGOv2"
         tools:targetApi="31">
         <activity
+            android:name=".Cliente.ClienteVeRepartidor"
+            android:exported="false" />
+        <activity
+            android:name=".Cliente.ClientePerfil"
+            android:exported="false" />
+        <activity
             android:name=".Cliente.ClienteCarrito"
             android:exported="false" />
         <activity
