--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,27 @@
         android:theme="@style/Theme.DeliGOv2"
         tools:targetApi="31">
         <activity
+            android:name=".LogIn.LoginCrearCuentaPasoFinal"
+            android:exported="false" />
+        <activity
+            android:name=".LogIn.LoginCrearCuentaSextoPaso"
+            android:exported="false" />
+        <activity
+            android:name=".LogIn.LoginCrearCuentaQuintoPaso"
+            android:exported="false" />
+        <activity
+            android:name=".LogIn.LoginCrearCuentaCuartoPaso"
+            android:exported="false" />
+        <activity
+            android:name=".LogIn.LoginCrearCuentaTercerPaso"
+            android:exported="false" />
+        <activity
+            android:name=".LogIn.LoginCrearCuentaSegundoPaso"
+            android:exported="false" />
+        <activity
+            android:name=".LogIn.LoginCrearCuentaPrimerPaso"
+            android:exported="false" />
+        <activity
             android:name=".LogIn.LoginRecuperarPasswordPasoFinal"
             android:exported="false" />
         <activity
