--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.DeliGOv2"
         tools:targetApi="31">
         <activity
+            android:name=".SuperAdmin.SuperAdminPerfil"
+            android:exported="false"
+            android:theme="@style/Theme.DeliGOv2" />
+        <activity
             android:name=".LogIn.LoginCrearCuentaPasoFinal"
             android:exported="false" />
         <activity
