--- a/settings.gradle
+++ b/settings.gradle
@@ -17,6 +17,11 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
     }
+    //Para los charts
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        maven { url 'https://jitpack.io' }
+    }
 }
 
 rootProject.name = "DeliGOv2"
