--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.DeliGOv2"
         tools:targetApi="31">
         <activity
+            android:name=".Repartidor.RepartidorVistaHome"
+            android:exported="false" />
+        <activity
             android:name=".SuperAdmin.SuperAdminVistaPerfilRepartidor"
             android:exported="false" />
         <activity
