--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,28 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DeliGOv2"
         tools:targetApi="31" >
+        <activity android:name=".Administrador.AdministradorRestauranteActivity"
+            android:exported="false" />
+        <activity android:name=".Administrador.AdministradorDetalleCompraActivity"
+            android:exported="false"/>
+        <activity android:name=".Administrador.AdministradorEditarPlatoActivity"
+            android:exported="false"/>
+        <activity android:name=".Administrador.AdministradorHistorialActivity"
+            android:exported="false"/>
+        <activity android:name=".Administrador.AdministradorDetallePlatoActivity"
+            android:exported="false"/>
+        <activity android:name=".Administrador.AdministradorInfoRestauranteActivity"
+            android:exported="false"/>
+        <activity android:name=".Administrador.AdministradorRegistroPlato1Activity"
+            android:exported="false"/>
+        <activity android:name=".Administrador.AdministradorRegistroPlato2Activity"
+            android:exported="false"/>
+        <activity android:name=".Administrador.AdministradorRegistroPlatoExitosoActivity"
+            android:exported="false"/>
+        <activity android:name=".Administrador.AdministradorReporteClientesActivity"
+            android:exported="false"/>
+        <activity android:name=".Administrador.AdministradorReporteComidaActivity"
+            android:exported="false"/>
         <activity
             android:name=".Adapters.RepartidorHistorialPedidosAdapter"
             android:exported="false" />
